# Halide

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.doc  Doxyfile.local  Makefile  README.md  README_webassembly.md  halide.cmake
.github/workflows/: test.yml
apps/: CMakeLists.txt
apps/autoscheduler/: CMakeLists.txt
apps/bgu/: CMakeLists.txt
apps/bilateral_grid/: CMakeLists.txt
apps/blur/: CMakeLists.txt
apps/camera_pipe/: CMakeLists.txt
apps/conv_layer/: CMakeLists.txt
apps/cuda_mat_mul/: CMakeLists.txt
apps/glsl/: CMakeLists.txt
apps/harris/: CMakeLists.txt
apps/hist/: CMakeLists.txt
apps/iir_blur/: CMakeLists.txt
apps/interpolate/: CMakeLists.txt
apps/lens_blur/: CMakeLists.txt
apps/linear_algebra/: CMakeLists.txt
apps/linear_algebra/benchmarks/: CMakeLists.txt
apps/linear_algebra/src/: CMakeLists.txt
apps/linear_algebra/tests/: CMakeLists.txt
apps/linear_blur/: CMakeLists.txt
apps/local_laplacian/: CMakeLists.txt
apps/max_filter/: CMakeLists.txt
apps/nl_means/: CMakeLists.txt
apps/resize/: CMakeLists.txt
apps/stencil_chain/: CMakeLists.txt
apps/unsharp/: CMakeLists.txt
apps/wavelet/: CMakeLists.txt
autoschedulers/: CMakeLists.txt
autoschedulers/Adams2019/: AutoSchedule.cpp  CMakeLists.txt  LoopNest.cpp  Makefile  autoscheduler.inc  autotune_loop.sh  test.cpp
autoschedulers/Li2018/: CMakeLists.txt  GradientAutoscheduler.cpp  Makefile  test.cpp  test.py
autoschedulers/Mullapudi2016/: AutoSchedule.cpp  AutoSchedule.h  CMakeLists.txt
autoschedulers/common/: ASLog.h  CMakeLists.txt  Errors.h
autoschedulers/gradient/: README.md
cmake/: AddFlagIfSupported.cmake  HalideCXXFlagsOverride.cmake  HalideGeneratorHelpers.cmake  HalideTestHelpers.cmake
dependencies/: CMakeLists.txt
dependencies/clang/: CMakeLists.txt
dependencies/llvm/: CMakeLists.txt
doc/: CMakeLists.txt
packaging/: CMakeLists.txt  HalideConfig.cmake
python_bindings/: CMakeLists.txt  requirements.txt
python_bindings/apps/: CMakeLists.txt
python_bindings/correctness/: CMakeLists.txt
python_bindings/src/: CMakeLists.txt  PyEnums.cpp
python_bindings/stub/: AddHalideGeneratorPython.cmake  CMakeLists.txt  PyStubImpl.cpp
python_bindings/tutorial/: CMakeLists.txt
src/: AddImageChecks.cpp  AddImageChecks.h  ApplySplit.cpp  Argument.h  AutoSchedule.cpp  AutoScheduleUtils.h  Bounds.cpp  BoundsInference.cpp  CMakeLists.txt  CSE.cpp  CodeGen_ARM.cpp  CodeGen_ARM.h  CodeGen_C.cpp  CodeGen_Hexagon.cpp  CodeGen_Internal.cpp  CodeGen_Internal.h  CodeGen_LLVM.cpp  CodeGen_LLVM.h  CodeGen_PTX_Dev.cpp  CodeGen_WebAssembly.cpp  CodeGen_WebAssembly.h  CodeGen_X86.cpp  CodeGen_X86.h  CopyElision.cpp  Deinterleave.cpp  Derivative.cpp  Expr.h  Func.cpp  Func.h  IR.cpp  IR.h  IRMatch.h  IROperator.cpp  IROperator.h  IRPrinter.cpp  IRPrinter.h  Inline.cpp  JITModule.cpp  JITModule.h  JSVMExecutor.cpp  (+33 more)
src/autoscheduler/: CMakeLists.txt
src/autoscheduler/adams/: AutoSchedule.cpp
src/autoscheduler/classic/: AutoSchedule.cpp  AutoSchedule.h  CMakeLists.txt
src/autoscheduler/gradient/: CMakeLists.txt
src/runtime/: CMakeLists.txt  HalideBuffer.h  HalideRuntime.h  arm.ll  device_interface.cpp  fake_host_cpu_count.cpp  hexagon_dma.cpp
test/: CMakeLists.txt
test/auto_schedule/: CMakeLists.txt
test/correctness/: CMakeLists.txt  atomics.cpp  boundary_conditions.cpp  cascaded_filters.cpp  compile_to_multitarget.cpp  compute_with.cpp  cross_compilation.cpp  cuda_8_bit_dot_product.cpp  debug_to_file.cpp  debug_to_file_multiple_outputs.cpp  debug_to_file_reorder.cpp  extern_consumer.cpp  func_clone.cpp  func_wrapper.cpp  gpu_object_lifetime_1.cpp  gpu_object_lifetime_2.cpp  gpu_object_lifetime_3.cpp  image_io.cpp  image_wrapper.cpp  lots_of_inputs.cpp  multi_splits_with_diff_tail_strategies.cpp  predicated_store_load.cpp  rfactor.cpp  simd_op_check.cpp  simd_op_check.h  vector_math.cpp  vector_reductions.cpp
test/error/: CMakeLists.txt  buffer_larger_than_two_gigs.cpp  metal_vector_too_large.cpp  undefined_func_compile.cpp  undefined_func_realize.cpp  undefined_pipeline_compile.cpp  wrong_type.cpp
test/generator/: CMakeLists.txt  gpu_object_lifetime_aottest.cpp  metadata_tester_aottest.cpp  user_context_generator.cpp
test/opengl/: CMakeLists.txt  rewrap_texture.cpp  save_state.cpp
test/performance/: CMakeLists.txt  fan_in.cpp
test/scripts/: build_travis.sh
test/warning/: CMakeLists.txt
tools/: CMakeLists.txt
tutorial/: CMakeLists.txt
